--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,445 +22,48 @@
             android:layout_marginBottom="30dp"
             android:text="Five Things Project"
             android:textColor="#000000"
-            android:textSize="24sp"
+            android:textSize="40sp"
             android:textAllCaps="false"/>
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="Republic of Korea"
-            android:textColor="#000000"
-            android:textSize="16sp" />
-
-        <ImageView
-            android:id="@+id/korea"
-            android:layout_width="200dp"
-            android:layout_height="150dp"
-            android:layout_marginBottom="50dp"
+        <ImageButton
+            android:id="@+id/korea1"
+            android:layout_width="240dp"
+            android:layout_height="160dp"
+            android:layout_marginBottom="25dp"
             android:scaleType="centerCrop"
             android:src="@drawable/korea"/>
 
-        <CheckBox
-            android:id="@+id/krpopulation_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Population"
-            android:textSize="16sp"/>
-
-        <CheckBox
-
-            android:id="@+id/krarea_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Area"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/krcapital_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Capital City"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/krlanguage_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Language"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/krfood_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Food"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/krgdp_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="30dp"
-            android:text="GDP"
-            android:textSize="16sp"/>
-
-        <TextView
-            android:id="@+id/krinfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="Information"
-            android:textColor="#000000"
-            android:textSize="16sp"/>
-
-        <Button
-            android:id="@+id/krshow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="100dp"
-            android:text="Show"
-            android:onClick="showKorea"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="China"
-            android:textColor="#000000"
-            android:textSize="16sp"/>
-
-        <ImageView
-            android:id="@+id/china"
-            android:layout_width="200dp"
-            android:layout_height="150dp"
-            android:layout_marginBottom="50dp"
+        <ImageButton
+            android:id="@+id/china1"
+            android:layout_width="240dp"
+            android:layout_height="160dp"
+            android:layout_marginBottom="25dp"
             android:scaleType="centerCrop"
             android:src="@drawable/china"/>
 
-        <CheckBox
-            android:id="@+id/chpopulation_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Population"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/charea_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Area"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/chcapital_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Capital City"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/chlanguage_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Language"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/chfood_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Food"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/chgdp_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="30dp"
-            android:text="GDP"
-            android:textSize="16sp"/>
-
-        <TextView
-            android:id="@+id/chinfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="Information"
-            android:textColor="#000000"
-            android:textSize="16sp"/>
-
-        <Button
-            android:id="@+id/chshow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="100dp"
-            android:text="Show"
-            android:onClick="showChina"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="Japan"
-            android:textColor="#000000"
-            android:textSize="16sp"/>
-
-        <ImageView
-            android:id="@+id/japan"
-            android:layout_width="200dp"
-            android:layout_height="150dp"
-            android:layout_marginBottom="50dp"
+        <ImageButton
+            android:id="@+id/japan1"
+            android:layout_width="240dp"
+            android:layout_height="160dp"
+            android:layout_marginBottom="25dp"
             android:scaleType="centerCrop"
             android:src="@drawable/japan"/>
 
-        <CheckBox
-            android:id="@+id/jppopulation_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Population"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/jparea_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Area"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/jpcapital_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Capital City"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/jplanguage_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Language"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/jpfood_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Food"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/jpgdp_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="30dp"
-            android:text="GDP"
-            android:textSize="16sp"/>
-
-        <TextView
-            android:id="@+id/jpinfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="Information"
-            android:textColor="#000000"
-            android:textSize="16sp"/>
-
-        <Button
-            android:id="@+id/jpshow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="100dp"
-            android:text="Show"
-            android:onClick="showJapan"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="U.S.A."
-            android:textColor="#000000"
-            android:textSize="16sp"/>
-
-        <ImageView
-            android:id="@+id/usa"
-            android:layout_width="200dp"
-            android:layout_height="150dp"
-            android:layout_marginBottom="50dp"
+        <ImageButton
+            android:id="@+id/usa1"
+            android:layout_width="240dp"
+            android:layout_height="160dp"
+            android:layout_marginBottom="25dp"
             android:scaleType="centerCrop"
             android:src="@drawable/usa"/>
 
-        <CheckBox
-
-            android:id="@+id/uspopulation_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Population"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/usarea_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Area"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/uscapital_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Capital City"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/uslanguage_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Language"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/usfood_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Food"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/usgdp_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="30dp"
-            android:text="GDP"
-            android:textSize="16sp"/>
-
-        <TextView
-            android:id="@+id/usinfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="Information"
-            android:textColor="#000000"
-            android:textSize="16sp"/>
-
-        <Button
-            android:id="@+id/usshow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="100dp"
-            android:text="Show"
-            android:onClick="showUsa"/>
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:text="Hong Kong"
-            android:textColor="#000000"
-            android:textSize="16sp"/>
-
-        <ImageView
-            android:id="@+id/hongkong"
-            android:layout_width="200dp"
-            android:layout_height="150dp"
-            android:layout_marginBottom="50dp"
+        <ImageButton
+            android:id="@+id/hongkong1"
+            android:layout_width="240dp"
+            android:layout_height="160dp"
+            android:layout_marginBottom="25dp"
             android:scaleType="centerCrop"
             android:src="@drawable/hongkong"/>
-
-        <CheckBox
-            android:id="@+id/hkpopulation_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Population"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/hkarea_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Area"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/hkcapital_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Capital City"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/hklanguage_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Language"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/hkfood_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="5dp"
-            android:text="Food"
-            android:textSize="16sp"/>
-
-        <CheckBox
-            android:id="@+id/hkgdp_checkbox"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingLeft="8dp"
-            android:layout_marginBottom="30dp"
-            android:text="GDP"
-            android:textSize="16sp"/>
-
-        <TextView
-            android:id="@+id/hkinfo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="15dp"
-            android:text="Information"
-            android:textColor="#000000"
-            android:textSize="16sp"/>
-
-        <Button
-            android:id="@+id/hkshow"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp"
-            android:text="Show"
-            android:onClick="showHongkong"/>
 
     </LinearLayout>
 
