--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,8 +2,8 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Primary theme color of the app (sets background color of app bar) -->
-        <item name="colorPrimary">#FF00FFFF</item>
+        <item name="colorPrimary">#FF98FB98</item>
         <!-- Background color of buttons in the app -->
-        <item name="colorButtonNormal">#FF98FB98</item>
+        <item name="colorButtonNormal">#C0C0C0</item>
     </style>
 </resources>
