--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,8 @@
         android:paddingBottom="@dimen/activity_vertical_margin"
         android:paddingLeft="@dimen/activity_horizontal_margin"
         android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin">
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:background="#66FFFF">
 
         <TextView
             android:layout_width="wrap_content"
@@ -31,6 +32,7 @@
             android:layout_height="160dp"
             android:layout_marginBottom="40dp"
             android:scaleType="centerCrop"
+            android:background="@android:color/transparent"
             android:src="@drawable/korea"/>
 
         <ImageButton
@@ -39,6 +41,7 @@
             android:layout_height="160dp"
             android:layout_marginBottom="40dp"
             android:scaleType="centerCrop"
+            android:background="@android:color/transparent"
             android:src="@drawable/china"/>
 
         <ImageButton
@@ -47,6 +50,7 @@
             android:layout_height="160dp"
             android:layout_marginBottom="40dp"
             android:scaleType="centerCrop"
+            android:background="@android:color/transparent"
             android:src="@drawable/japan"/>
 
         <ImageButton
@@ -55,6 +59,7 @@
             android:layout_height="160dp"
             android:layout_marginBottom="40dp"
             android:scaleType="centerCrop"
+            android:background="@android:color/transparent"
             android:src="@drawable/usa"/>
 
         <ImageButton
@@ -63,6 +68,7 @@
             android:layout_height="160dp"
             android:layout_marginBottom="40dp"
             android:scaleType="centerCrop"
+            android:background="@android:color/transparent"
             android:src="@drawable/hongkong"/>
 
     </LinearLayout>
