--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,6 +4,6 @@
         <!-- Primary theme color of the app (sets background color of app bar) -->
         <item name="colorPrimary">#FF98FB98</item>
         <!-- Background color of buttons in the app -->
-        <item name="colorButtonNormal">#C0C0C0</item>
+        <item name="colorButtonNormal">#FF0000</item>
     </style>
 </resources>
